# snowboard-agent

./: .gitignore  45b60f2  README.md  main.py  pyproject.toml  requirements.txt
docs/: arch.md  milestone.md
hw/: README.md
hw/audio/: README.md  test_mic.sh  test_speaker.sh
hw/audio/test/: amplify.py  test_mic.sh  test_speaker.sh
hw/display/: display.py
scripts/: run.sh  setup_rpi.sh
src/sbd/: __init__.py  main.py
src/sbd/action/: base.py
src/sbd/adaptor/: base.py
src/sbd/core/: logger.py
src/sbd/core/audio/: base.py
src/sbd/core/config/: __init__.py  settings.py
src/sbd/core/display/: README.md
src/sbd/core/display/driver/: README.md
src/sbd/core/display/driver/waveshare_oled_1in5_rgb/: DEV_Config.c  Makefile  OLED_1in5_rgb.c  display_driver.c  test_starring_night.py
src/sbd/core/event_bus/: __init__.py  bus.py  events.py
src/sbd/core/state_manager/: __init__.py  manager.py  states.py
src/sbd/perception/: base.py
src/sbd/wake/: base.py
tests/: README.md  conftest.py  test_event_bus.py  test_state_manager.py
